kubernetes/network-policies/allow-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-policy
  namespace: vms
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - toEndpoints:
      - matchLabels:
          "k8s:io.kubernetes.pod.namespace": kube-system
          "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
           - port: "53"
             protocol: "ANY"
          rules:
            dns:
              - matchName: "rio.systems"
              - matchPattern: "*.rio.systems"

    - toFQDNs:
      - matchName: "rio.systems"
      - matchPattern: "*.rio.systems"
