kubernetes/network-policies/malware-egress-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: suricata-egress
  namespace: suricata
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - toEntities:
      - world

    - toEndpoints:
      - matchLabels:
          k8s:io.kubernetes.pod.namespace: kube-system
          k8s:k8s-app: kube-dns
      toPorts:
      - ports:
        - port: "53"
          protocol: ANY

    - toEndpoints:
      - matchLabels:
          k8s:io.kubernetes.pod.namespace: loki
          k8s:app: loki
      toPorts:
      - ports:
        - port: "3100"
          protocol: TCP
        rules:
          http:
            - method: "POST"
              path: "/loki/api/v1/push"
